<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">
        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mortgage_amount_prompt" />

            <EditText
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/mortgage_amount" />
        </TableRow>
        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/interest_rate_prompt" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/interest_rate" />
        </TableRow>
        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amortization_period_prompt" />
            <EditText android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/amortization_period"/>
        </TableRow>
        <TableRow>
            <Button android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/loan_button_text"
                android:onClick="showLoanPayment"/>
        </TableRow>
        <TableRow>
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monthly_payment_prompt"/>
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/monthly_payment_result"/>

        </TableRow>
        <TableRow>
            <TextView android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/total_payment_prompt"/>
            <TextView android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/total_payment_result"/>
        </TableRow>


    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>